# antboot

./: .gitignore  Cargo.toml  run.sh  setup.sh
esp/: NvVars  boot.toml
esp/EFI/BOOT/: BOOTX64.efi  bootx64.efi
src/: boot_info.rs  main.rs
