[package]
name = "antboot-efi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { version = "0.7.4", default-features = false }
log = "0.4.21"
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.8.12"
uefi = { version = "0.27.0", features = ["global_allocator", "alloc"] }
uefi-services = "0.24.0"
